--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.0.0"
+  "express": "^4.18.2",
+  "mongoose": "^7.0.0",
+  "dotenv": "^16.0.0"
   }
 }
