--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-  "express": "^4.18.2",
-  "mongoose": "^7.0.0",
-  "dotenv": "^16.0.0"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0",
+    "dotenv": "^16.0.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1"
   }
 }
