Update frontend to connect to production backend API

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,7 @@ PORT=8080
 JWT_SECRET=your-very-secure-secret-key-change-this-in-production
 
 # Frontend URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://sigiri.io
 
 # Email Configuration (Optional - for production)
 # For development, emails will be logged to console
