Add DigitalOcean App Platform deployment configuration
- Added app.yaml for DigitalOcean App Platform
- Included MongoDB connection string
- Configured environment variables
- Added comprehensive deployment guide
- Backend ready for cloud deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,18 @@
-PORT=5000
-MONGO_URI=mongodb+srv://master-converter-user:RtZtvSpXgp61cUhW@master-converter-cluste.h0rh5nr.mongodb.net/master-converter?retryWrites=true&w=majority&appName=master-converter-cluster
+# Server Configuration
+PORT=8080
+
+# MongoDB Atlas Connection
+MONGO_URI=mongodb+srv://master-converter-user:RtZtvSpXgp61cUhW@master-converter-cluste.h0rh5nr.mongodb.net/sigiri?retryWrites=true&w=majority&appName=master-converter-cluster
+
+# JWT Secret (Change this in production!)
+JWT_SECRET=sigiri-super-secret-jwt-key-change-in-production-2025
+
+# Frontend URL
+FRONTEND_URL=https://sigiri.io
+
+# Email Configuration (Optional - for production)
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_USER=your-email@gmail.com
+# EMAIL_PASS=your-app-password
+# EMAIL_FROM=SIGIRI <noreply@sigiri.com>
