--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,10 @@
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.0",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.0",
+    "pdf-lib": "^1.17.1",
+    "uuid": "^9.0.1"
   }
 }
